2th commit solve the scrolling problem by remove the overflow hidden

--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@
 
 body {
     font-family: "Work Sans", serif;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 html {
